<resources>
    <string name="app_name">PawSwipeApp</string>


    <string name="chat_btn">Chats</string>
    <string name="filter_btn">Filter</string>
    <string name="matching_btn">Matchen</string>
    <string name="animalList_btn">Tierliste</string>
    <string name="search_pt">Suchen</string>

    <string name="addPetProfileImageButton_text">Profilbild hinzufügen</string>
    <string name="petName_hint">Name</string>
    <string name="petSpecies_hint">Tierart</string>
    <string name="petBreed_hint">Rasse</string>
    <string name="petColor_hint">Farbe/Muster</string>
    <string name="petBirthday_hint">Geburtstag</string>
    <string name="petPreExistingIllness_hint">Vorerkrankungen</string>
    <string name="cancelButton_text">Abbrechen</string>
    <string name="createButton_text">Tier erstellen</string>


    <string name="addProfilePictureButtonText">Profilbild hinzufügen</string>
    <string name="cancelButtonText">Abbrechen</string>
    <string name="createUserButtonText">Profil erstellen</string>

    <string name="matchingText">Matchen</string>
    <string name="settingsDropDown">Settings</string>
    <string name="chatsButton">Chats</string>
    <string name="matchenButton">Matchen</string>
    <string name="tierlisteButton">Tierliste</string>

    <string name="tierliste">Tierliste</string>
    <string name="search_hint">Suchen</string>
    <string name="app_label">WhatIsThis</string>

    <string name="animalNameText">Tiername</string>

    <string name="editProfileOption">Profil bearbeiten</string>
    <string name="editFilerOption">Filter bearbeiten</string>
    <string name="messageSettingsOption">Nachrichteneinstellungen</string>
    <string name="animalServicesOption">Tierdienste</string>
    <string name="createAnimalOption">Tier erstellen</string>
    <string name="editAnimalOption">Tier bearbeiten</string>
    <string name="blockedUsersOption">Blockierte Nutzer</string>
    <string name="requestSupportOption">Support</string>
    <string name="logoutOption">Abmelden</string>

    <string name="pawSwipeTitle">PawSwipe</string>
    <string name="registerAsUserButton">Als Nutzer registrieren</string>
    <string name="registerAsShelterButton">Als Tierheim registrieren</string>
    <string name="toLoginButton">Zurück zum Login</string>
    <string name="goUserButton">Nutzer</string>
    <string name="goAnimalHomeButton">Tierheim</string>
    <string name="emailTextView">E-Mail</string>
    <string name="passwordTextView">Passwort</string>
    <string name="confirmPasswordTextView">Passwort bestätigen</string>
    <string name="registerAsUserTextView">Als Nutzer registrieren:</string>
    <string name="registerAsShelterTextView">---</string>
    <string name="birthdayButton_text">Birthday</string>
    <string name="animalService_tv">Tierdienste</string>
    <string name="saveChanges_btn"> Speichern</string>
    <string name="petDescription_hint">Beschreibung</string>
    <string name="loginButton_Text">Anmelden</string>
    <string name="loginRegister_button">Registrieren</string>
    <string name="cancel">Abbrechen</string>
    <string name="create">Erstellen</string>
    <string name="lastname">Nachname</string>
    <string name="address">Wohnort</string>
    <string name="prename">Vorname</string>
    <string name="profileCreated">Profil erfolgreich angelegt</string>

    <string name="yes_dialogText">Ja</string>
    <string name="no_dialogText">Nein</string>
    <string name="saveChanges_headerText">Änderungen speichern</string>
    <string name="saveChanges_messageText">Wollen Sie alle Änderungen speichern?</string>
    <string name="cancelChanges_headerText">Wirklich abbrechen</string>
    <string name="cancelChanges_messageText">Alle Änderungen gehen verloren</string>
    <string name="deleteProfile_headerText">Account löschen</string>
    <string name="deleteProfile_messageText">Wollen Sie das Profil löschen?</string>
    <string name="firstName_tv">Vorname</string>
    <string name="name_et">Nachname</string>
    <string name="address_et">Wohnort</string>
    <string name="deleteProfile_btn">Profil löschen</string>
    <string name="editAnimal_tv">Tier bearbeiten</string>
    <string name="editUser_tv">Profil bearbeiten</string>
    <string name="animalList_tv">Tierliste</string>
    <string name="filterEdit_tv">Filter bearbeiten</string>
    <string name="filterRadius_et">Radius in km</string>
    <string name="no_selection">---</string>

    <string name="resetFilter_btn">Zurücksetzen</string>
    <string name="createAnimal_tv">Tier erstellen</string>
    <string name="createUser_tv">Profil erstellen</string>
    <string name="userName_hint">Nutzername</string>
    <string name="postalCode_hint">Postleitzahl</string>
    <string name="street_hint">Straße</string>
    <string name="houseNumber_hint">Nummer</string>
    <string name="fillEditTexts">Bitte alle mit * markierten Pflichtfelder ausfüllen.</string>

    <string name="login_no_account_found_with_email">Es wurde kein Account mit dieser E-Mail-Adresse gefunden.</string>
    <string name="login_success">Willkommen zurück, %s.</string>
    <string name="login_error">Bitte überprüfen Sie Ihre E-Mail-Adresse und Ihr Passwort.</string>
    <string name="login_null_error">Irgendetwas ist schief gelaufen. Überprüfe deine Verbindung oder versuche es später nochmal.</string>

    <string name="login_shelter_error">Anmeldung als Tierheim nicht möglich.</string>
    <string name="login_user_error">Anmeldung als Nutzer nicht möglich.</string>
    <string name="login_shelter_or_user">Bitte wählen Sie aus, ob Sie sich als Nutzer oder Tierheim anmelden möchten.</string>

    <string name="login_valid_email_and_password">Bitte gib eine gültige E-Mail-Adresse und ein Passwort ein.</string>
    <string name="login_invalid_discriminator">Ungültiger Discriminator</string>

    <string name="birthday_text">Geburtstag</string>
    <string name="shelterProfile_tv">Tierheim erstellen</string>
    <string name="shelterName_tv">Name des Tierheims</string>
    <string name="openingHours_tv">Öffnungszeiten</string>
    <string name="homepage_tv">Homepage</string>
    <string name="phoneNumber_tv">Telefonnummer</string>
    <string name="editShelter_tv">Tierheim bearbeiten</string>
    <string name="deleteShelter_tv">Tierheim löschen</string>
    <string name="create_error_text">Account mit angegebener e-Mail oder Tierheim name bereits vorhanden</string>
    <string name="like_dislike_button_description">like/dislike_button</string>
    <string name="animal_image_content_description">animal image</string>
    <string name="animal_item_name_placeholder">Max</string>
    <string name="animal_item_species_placeholder">Katze</string>
    <string name="animal_item_breed_placeholder">Britisch Kurzhaar</string>
    <string name="animal_list_empty_text">Es wurden noch keine Tiere geliked</string>
    <string name="pflichtfelder">* Pflichtfelder</string>
    <string name="like_error_text">Aktion konnte nicht ausgeführt werden</string>
    <string name="zum_beenden_der_app">Zum Beenden der App erneut \"Zurück\" drücken.</string>
    <string name="shelter_no_animals_text">Keine Tiere erstellt</string>
    <string name="profile_no_animals_liked_text">Keine Tiere als \'Gefällt mir\' markiert</string>
    <string name="animal_without_name_text">namenlos</string>
    <string name="detailed_animal_name_placeholder">Name</string>
    <string name="detailed_animal_species_placeholder">Art</string>
    <string name="detailed_animal_breed_placeholder">Rasse</string>
    <string name="detailed_animal_gender_placeholder">männlich</string>
    <string name="detailed_animal_birthday_placeholder">2020–11–05</string>
    <string name="detailed_animal_illness_placeholder">Krebs</string>
    <string name="detailed_animal_color_placeholder">Grau Gestreift</string>
    <string name="detailed_animal_phone_placeholder">123456789</string>
    <string name="detailed_animal_email_placeholder">test.email@email.com</string>
    <string name="detailed_animal_species_hint_text">Tierart:</string>
    <string name="detailed_animal_breed_hint_text">Rasse:</string>
    <string name="detailed_animal_gender_hint_text">Geschlecht:</string>
    <string name="detailed_animal_birthday_hint_text">Geburtstag:</string>
    <string name="detailed_animal_color_hint_text">Farbe/Muster</string>
    <string name="detailed_animal_illness_hint_text">Vorerkrankungen:</string>
    <string name="detailed_animal_phone_hint_text">Telefonnummer:</string>
    <string name="detailed_animal_email_hint_text">E-Mail:</string>
    <string name="detailed_shelter_phone_text">(+49) %s</string>
    <string name="coming_soon_text">Demnächst verfügbar!</string>
    <string name="ok">Ok</string>
    <string name="not_ok">Nicht Ok</string>
    <string name="like_to_see">Liken zum sehen!</string>
    <string name="not_implemented_yet">Noch nicht implementiert</string>

</resources>