<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/outer_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/detailedAnimalName_textView"
                    style="@android:style/Widget.Holo.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/detailed_animal_name_placeholder"
                    android:textAlignment="center"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/detailedAnimalPicture_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/animal_image_content_description"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalSpeciesHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_species_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalSpecies_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_species_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalBreedHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_breed_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalBreed_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_breed_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalGenderHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_gender_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalGender_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_gender_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalBirthdayHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_birthday_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalBirthday_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_birthday_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalColorHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_color_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalColor_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_color_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalPreExistingIllnessHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_illness_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalPreExistingIllness_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_illness_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalPhoneHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_phone_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalPhone_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_phone_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailedAnimalEmailHint_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/detailed_animal_email_hint_text"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detailedAnimalEmail_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:text="@string/detailed_animal_email_placeholder"
                        android:textAlignment="center"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>